[gd_scene load_steps=10 format=2]

[ext_resource path="res://media/ui/up1.png" type="Texture" id=1]
[ext_resource path="res://universal.tscn" type="PackedScene" id=2]
[ext_resource path="res://media/ui/dn1.png" type="Texture" id=3]
[ext_resource path="res://media/ui/up5.png" type="Texture" id=4]
[ext_resource path="res://media/ui/dn5.png" type="Texture" id=5]
[ext_resource path="res://life.gd" type="Script" id=6]
[ext_resource path="res://Health.tres" type="DynamicFont" id=7]
[ext_resource path="res://media/ui/head.png" type="Texture" id=8]
[ext_resource path="res://media/ui/new.png" type="Texture" id=9]



[node name="Life" type="Node"]
script = ExtResource( 6 )

[node name="Universal" parent="." instance=ExtResource( 2 )]

[node name="Life1" type="CenterContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Life1"]
margin_left = 122.0
margin_right = 290.0
margin_bottom = 240.0

[node name="HBoxContainer" type="HBoxContainer" parent="Life1/VBoxContainer"]
margin_right = 168.0
margin_bottom = 78.0
alignment = 1

[node name="up11" type="ToolButton" parent="Life1/VBoxContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 78.0
icon = ExtResource( 1 )
flat = false
align = 0

[node name="up51" type="ToolButton" parent="Life1/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 78.0
icon = ExtResource( 4 )
flat = false
align = 2

[node name="p1" type="Label" parent="Life1/VBoxContainer"]
margin_top = 82.0
margin_right = 168.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 3
max_lines_visible = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Life1/VBoxContainer"]
margin_top = 162.0
margin_right = 168.0
margin_bottom = 240.0
alignment = 1

[node name="dn11" type="ToolButton" parent="Life1/VBoxContainer/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 78.0
icon = ExtResource( 3 )
flat = false
align = 0

[node name="dn51" type="ToolButton" parent="Life1/VBoxContainer/HBoxContainer2"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 78.0
icon = ExtResource( 5 )
flat = false
align = 2

[node name="Life2" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Life2"]
margin_left = 122.0
margin_right = 290.0
margin_bottom = 240.0

[node name="HBoxContainer" type="HBoxContainer" parent="Life2/VBoxContainer"]
margin_right = 168.0
margin_bottom = 78.0
alignment = 1

[node name="up12" type="ToolButton" parent="Life2/VBoxContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 78.0
icon = ExtResource( 1 )
flat = false
align = 0

[node name="up52" type="ToolButton" parent="Life2/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 78.0
icon = ExtResource( 4 )
flat = false
align = 2

[node name="p2" type="Label" parent="Life2/VBoxContainer"]
margin_top = 82.0
margin_right = 168.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 1
max_lines_visible = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Life2/VBoxContainer"]
margin_top = 162.0
margin_right = 168.0
margin_bottom = 240.0
alignment = 1

[node name="dn12" type="ToolButton" parent="Life2/VBoxContainer/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 78.0
icon = ExtResource( 3 )
flat = false
align = 0

[node name="dn52" type="ToolButton" parent="Life2/VBoxContainer/HBoxContainer2"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 78.0
icon = ExtResource( 5 )
flat = false
align = 2

[node name="Life3" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Life3"]
margin_left = 122.0
margin_right = 290.0
margin_bottom = 240.0

[node name="HBoxContainer" type="HBoxContainer" parent="Life3/VBoxContainer"]
margin_right = 168.0
margin_bottom = 78.0
alignment = 1

[node name="up13" type="ToolButton" parent="Life3/VBoxContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 78.0
icon = ExtResource( 1 )
flat = false
align = 0

[node name="up53" type="ToolButton" parent="Life3/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 78.0
icon = ExtResource( 4 )
flat = false
align = 2

[node name="p3" type="Label" parent="Life3/VBoxContainer"]
margin_top = 82.0
margin_right = 168.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 3
max_lines_visible = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Life3/VBoxContainer"]
margin_top = 162.0
margin_right = 168.0
margin_bottom = 240.0
alignment = 1

[node name="dn13" type="ToolButton" parent="Life3/VBoxContainer/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 78.0
icon = ExtResource( 3 )
flat = false
align = 0

[node name="dn53" type="ToolButton" parent="Life3/VBoxContainer/HBoxContainer2"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 78.0
icon = ExtResource( 5 )
flat = false
align = 2

[node name="Life4" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Life4"]
margin_left = 122.0
margin_right = 290.0
margin_bottom = 240.0

[node name="HBoxContainer" type="HBoxContainer" parent="Life4/VBoxContainer"]
margin_right = 168.0
margin_bottom = 78.0
alignment = 1

[node name="up14" type="ToolButton" parent="Life4/VBoxContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 78.0
icon = ExtResource( 1 )
flat = false
align = 0

[node name="up54" type="ToolButton" parent="Life4/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 78.0
icon = ExtResource( 4 )
flat = false
align = 2

[node name="p4" type="Label" parent="Life4/VBoxContainer"]
margin_top = 82.0
margin_right = 168.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "20"
align = 1
valign = 3
max_lines_visible = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Life4/VBoxContainer"]
margin_top = 162.0
margin_right = 168.0
margin_bottom = 240.0
alignment = 1

[node name="dn14" type="ToolButton" parent="Life4/VBoxContainer/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 78.0
icon = ExtResource( 3 )
flat = false
align = 0

[node name="dn54" type="ToolButton" parent="Life4/VBoxContainer/HBoxContainer2"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 78.0
icon = ExtResource( 5 )
flat = false
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = 25.0
margin_right = 50.0
margin_bottom = -25.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="ToolButton" parent="VBoxContainer"]
margin_top = 137.0
margin_right = 140.0
margin_bottom = 273.0
icon = ExtResource( 9 )

[node name="Coin" type="ToolButton" parent="VBoxContainer"]
margin_top = 277.0
margin_right = 140.0
margin_bottom = 413.0
icon = ExtResource( 8 )
[connection signal="ready" from="." to="." method="_on_Life_ready"]
[connection signal="tree_exiting" from="." to="." method="_on_Life_tree_exiting"]
[connection signal="pressed" from="Life1/VBoxContainer/HBoxContainer/up11" to="." method="_on_up11_pressed"]
[connection signal="pressed" from="Life1/VBoxContainer/HBoxContainer/up51" to="." method="_on_up51_pressed"]
[connection signal="pressed" from="Life1/VBoxContainer/HBoxContainer2/dn11" to="." method="_on_dn11_pressed"]
[connection signal="pressed" from="Life1/VBoxContainer/HBoxContainer2/dn51" to="." method="_on_dn51_pressed"]
[connection signal="pressed" from="Life2/VBoxContainer/HBoxContainer/up12" to="." method="_on_up12_pressed"]
[connection signal="pressed" from="Life2/VBoxContainer/HBoxContainer/up52" to="." method="_on_up52_pressed"]
[connection signal="pressed" from="Life2/VBoxContainer/HBoxContainer2/dn12" to="." method="_on_dn12_pressed"]
[connection signal="pressed" from="Life2/VBoxContainer/HBoxContainer2/dn52" to="." method="_on_dn52_pressed"]
[connection signal="pressed" from="Life3/VBoxContainer/HBoxContainer/up13" to="." method="_on_up13_pressed"]
[connection signal="pressed" from="Life3/VBoxContainer/HBoxContainer/up53" to="." method="_on_up53_pressed"]
[connection signal="pressed" from="Life3/VBoxContainer/HBoxContainer2/dn13" to="." method="_on_dn13_pressed"]
[connection signal="pressed" from="Life3/VBoxContainer/HBoxContainer2/dn53" to="." method="_on_dn53_pressed"]
[connection signal="pressed" from="Life4/VBoxContainer/HBoxContainer/up14" to="." method="_on_up14_pressed"]
[connection signal="pressed" from="Life4/VBoxContainer/HBoxContainer/up54" to="." method="_on_up54_pressed"]
[connection signal="pressed" from="Life4/VBoxContainer/HBoxContainer2/dn14" to="." method="_on_dn14_pressed"]
[connection signal="pressed" from="Life4/VBoxContainer/HBoxContainer2/dn54" to="." method="_on_dn54_pressed"]
[connection signal="pressed" from="VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="VBoxContainer/Coin" to="." method="_on_Coin_pressed"]
